--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,16 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.EcoSynergyApp" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/greenTest</item>
+        <item name="colorSecondary">@color/greenTestB</item>
+        <item name="android:statusBarColor">@color/greenTest</item>
     </style>
 
     <style name="Theme.EcoSynergyApp" parent="Base.Theme.EcoSynergyApp" />
+
+    <style name="SplashScreenTheme" parent="Theme.Material3.Light.NoActionBar">
+        <item name="colorPrimary">@color/greenTest</item>
+        <item name="colorSecondary">@color/greenTestB</item>
+        <item name="android:statusBarColor">@color/greenTest</item>
+    </style>
 </resources>
