--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.EcoSynergyApp" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+    <style name="Base.Theme.EcoSynergyApp" parent="Theme.Material3.Dark.NoActionBar">
+        <item name="colorPrimary">@color/greenTest</item>
+        <item name="colorSecondary">@color/greenTestB</item>
+        <item name="android:statusBarColor">@color/greenTest</item>
     </style>
 </resources>
