--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="greenTest">#42f560</color>
     <color name="greenTestB">#22c73d</color>
+    <color name="blue">#0091FF</color>
 </resources>
