--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -17,7 +17,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@color/greenTest">
+            android:background="@color/black">
 
             <ImageButton
                 android:id="@+id/navDrawerButton"
@@ -27,7 +27,8 @@
                 android:background="@null"
                 android:contentDescription="@string/logouser"
                 android:layout_gravity="start"
-                android:layout_marginStart="0dp"/>
+                android:layout_marginStart="0dp"
+                android:tint="@color/white"/>
 
             <ImageView
                 android:id="@+id/logoImageView"
@@ -49,14 +50,13 @@
             android:id="@+id/bottomNavView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/greenTest"
+            android:background="@color/black"
             app:itemIconSize="35dp"
-            app:itemBackground="@drawable/selector_bottom_navigation_item"
             app:labelVisibilityMode="labeled"
             app:menu="@menu/bottom_nav"
             android:layout_gravity="start"
-            app:itemIconTint="@color/black"
-            app:itemTextColor="@color/black"/>
+            app:itemIconTint="@color/white"
+            app:itemTextColor="@color/white"/>
 
     </LinearLayout>
 
