--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -9,6 +9,12 @@
     android:orientation="vertical"
     android:gravity="center">
 
+    <ImageView
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:src="@drawable/logo_transparent"
+        android:layout_marginBottom="20dp"/>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -44,7 +50,8 @@
             android:id="@+id/txtemail"
             android:layout_width="300dp"
             android:layout_height="50dp"
-            tools:text="ecosynergy@gmail.com" />
+            tools:text="ecosynergy@gmail.com"
+            />
     </LinearLayout>
 
     <LinearLayout
