--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -1,31 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="176dp"
-    android:gravity="bottom"
+    android:layout_height="wrap_content"
     android:padding="16dp"
     android:background="@null"
-    android:theme="@style/Base.Theme.EcoSynergyApp">
+    android:gravity="center_vertical"
+    android:theme="@style/Base.Theme.EcoSynergyApp"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/logo_transparent"/>
-
-    <TextView
-        android:layout_width="wrap_content"
+    <!-- LinearLayout for CircleImageView and user info -->
+    <LinearLayout
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Android Knowledge"
-        android:textColor="@color/black"
-        android:textStyle="bold"/>
+        android:layout_weight="1"
+        android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="contact@androidknowledge.com"
-        android:textColor="@color/black"
-        android:textSize="14sp"/>
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/userpicture"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/rafael"
+            app:civ_border_width="5dp"
+            app:civ_border_color="@color/black"
+            android:layout_gravity="start"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Rafael Guerra"
+                android:textSize="15sp"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:layout_marginEnd="5dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="\@rafaelguerra"
+                android:textColor="@color/gray"
+                android:textSize="13sp"/>
+
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="rafael@ecosynergy.com"
+            android:textColor="@color/black"
+            android:textSize="14sp"/>
+    </LinearLayout>
+
+    <!-- ImageButton for logout -->
+    <ImageButton
+        android:id="@+id/btnlogout"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_gravity="end"
+        android:src="@drawable/baseline_logout_24"
+        android:background="@null"
+        android:scaleType="fitXY"/>
 
 </LinearLayout>
