--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
+    <color name="gray">#616161</color>
     <color name="white">#FFFFFFFF</color>
     <color name="greenTest">#42f560</color>
     <color name="greenTestB">#22c73d</color>
