--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity"
+    tools:context=".RegisterActivity"
     android:orientation="vertical"
     android:gravity="center">
 
@@ -77,7 +77,7 @@
         android:id="@+id/btnregister"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:text="Registrar"
+        android:text="CONTINUAR"
         android:background="@drawable/button_background"
         android:textStyle="bold"/>
 
