--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -20,16 +20,13 @@
             android:background="@color/greenTestB"
             android:padding="10dp">
 
-            <ImageButton
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/navDrawerButton"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:scaleType="fitXY"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:src="@drawable/rafael"
-                android:background="@drawable/round_button"
                 android:contentDescription="@string/logouser"
-                android:layout_gravity="start"
-                android:layout_marginStart="0dp"/>
+                android:layout_gravity="start"/>
 
             <ImageView
                 android:id="@+id/logoImageView"
@@ -38,6 +35,7 @@
                 android:src="@drawable/logo_transparent"
                 android:background="@null"
                 android:layout_gravity="center_horizontal"/>
+
         </androidx.appcompat.widget.Toolbar>
 
         <FrameLayout
