--- a/app/src/main/res/layout/fragment_teams.xml
+++ b/app/src/main/res/layout/fragment_teams.xml
@@ -10,23 +10,27 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:gravity="center_vertical">
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:src="@drawable/rafael"
-            android:layout_marginLeft="20dp"
+            android:src="@drawable/letterequipe"
+            android:layout_marginStart="20dp"
             android:padding="5dp"
             android:layout_gravity="start"/>
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="Nome da Equipe"
             android:textStyle="bold"
             android:textSize="20sp"
-            android:layout_marginLeft="10dp"/>
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="10dp"
+            android:gravity="center_vertical"/>
 
         <ImageButton
             android:id="@+id/btnTeamSettings"
@@ -35,8 +39,8 @@
             android:scaleType="fitXY"
             android:src="@drawable/baseline_settings_24"
             android:background="@null"
-            android:layout_marginRight="10dp"
-            android:layout_gravity="center"/>
+            android:layout_marginEnd="10dp"
+            android:layout_gravity="end|center"/>
 
     </LinearLayout>
 
