--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -21,7 +21,7 @@
             android:id="@+id/userpicture"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:src="@drawable/rafael"
+            android:src="@drawable/letterrafael"
             android:layout_gravity="start"
             />
 
