--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,7 +25,7 @@
             android:layout_marginBottom="10dp"/>
 
         <EditText
-            android:id="@+id/txtemail"
+            android:id="@+id/txtEntry"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:hint="name@mail.com"
@@ -39,7 +39,7 @@
             android:layout_marginBottom="10dp"/>
 
         <EditText
-            android:id="@+id/txtpassword"
+            android:id="@+id/txtPassword"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
