--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -54,7 +55,22 @@
                 android:layout_height="300dp"
                 android:background="@color/greenTest"
                 android:layout_gravity="center"
-                />
+                android:layout_marginBottom="30dp"/>
+            <com.google.android.material.imageview.ShapeableImageView
+                app:shapeAppearanceOverlay="@style/RoundedSquare"
+                android:layout_width="380dp"
+                android:layout_height="300dp"
+                android:background="@color/greenTest"
+                android:layout_gravity="center"
+                android:layout_marginBottom="30dp"/>
+            <com.google.android.material.imageview.ShapeableImageView
+                app:shapeAppearanceOverlay="@style/RoundedSquare"
+                android:layout_width="380dp"
+                android:layout_height="300dp"
+                android:background="@color/greenTest"
+                android:layout_gravity="center"
+                android:layout_marginBottom="30dp"/>
+
 
         </LinearLayout>
 
