--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -17,37 +18,36 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="center">
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Email or Username"
-            android:layout_marginBottom="10dp"/>
 
-        <EditText
-            android:id="@+id/txtEntry"
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:hint="name@mail.com"
-            android:layout_marginBottom="20dp"/>
+            android:layout_marginBottom="20dp"
+            android:hint="Email ou Username">
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Password"
-            android:layout_marginBottom="10dp"/>
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/txtEntry"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textEmailAddress"/>
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <EditText
-            android:id="@+id/txtPassword"
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:hint="******"
-            android:layout_marginBottom="20dp"/>
+            android:layout_marginBottom="20dp"
+            app:passwordToggleEnabled="true"
+            android:hint="Senha">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/txtPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"/>
+        </com.google.android.material.textfield.TextInputLayout>
 
         <Button
-            android:id="@+id/btnlogin"
+            android:id="@+id/btnLogin"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:text="LOGIN"
@@ -55,19 +55,19 @@
             android:layout_marginBottom="15dp"/>
 
         <com.google.android.gms.common.SignInButton
-            android:id="@+id/btngoogle"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:text="Sign in with Google"
-            android:layout_marginBottom="15dp"/>
+        android:id="@+id/btnGoogle"
+        android:layout_width="300dp"
+        android:layout_height="48dp"
+        android:text="Sign In"
+        android:layout_marginBottom="15dp"
+        android:textSize="18sp" />
 
         <Button
-            android:id="@+id/btnregister"
+            android:id="@+id/btnRegister"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:text="CADASTRAR"
             android:background="@drawable/button_background"/>
+
     </LinearLayout>
-
-
 </LinearLayout>
