--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -16,10 +16,10 @@
         android:orientation="vertical">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/userpicture"
+            android:id="@+id/userPicture"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:src="@drawable/letterrafael"
+            tools:src="@drawable/letterrafael"
             android:layout_gravity="start"
             />
 
@@ -29,33 +29,36 @@
             android:layout_marginTop="10dp">
 
             <TextView
+                android:id="@+id/lblUserFullname"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Rafael Guerra"
+                tools:text="Rafael Guerra"
                 android:textSize="15sp"
                 android:textColor="@color/black"
                 android:textStyle="bold"
                 android:layout_marginEnd="5dp"/>
 
             <TextView
+                android:id="@+id/lblUsername"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="\@rafaelguerra"
+                tools:text="\@rafaelguerra"
                 android:textColor="@color/gray"
                 android:textSize="13sp"/>
 
         </LinearLayout>
 
         <TextView
+            android:id="@+id/lblUserEmail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="rafael@ecosynergy.com"
+            tools:text="rafael@ecosynergy.com"
             android:textColor="@color/gray"
             android:textSize="14sp"/>
     </LinearLayout>
 
     <ImageButton
-        android:id="@+id/btnlogout"
+        android:id="@+id/btnLogout"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_gravity="end"
