--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="greenTest">#ADE5AB</color>
     <color name="greenTestB">#ADE5AB</color>
     <color name="blue">#0091FF</color>
+    <color name="pastel">#DADADA</color>
 </resources>
